--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-drag-drop",
+  "name": "@procraft/react-native-drag-drop",
   "version": "0.1.0",
   "description": "A drag-and-drop component for React Native.",
   "main": "lib/commonjs/index",
