--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "rootDir": ".",
     "paths": {
-      "react-native-drag-drop": ["./src/index"]
+      "@procraft/react-native-drag-drop": ["./src/index"]
     },
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
