chore: change release-it config

--- a/package.json
+++ b/package.json
@@ -111,7 +111,10 @@
       "tagName": "v${version}"
     },
     "npm": {
-      "publish": true
+      "publish": true,
+      "publishArgs": [
+        "--access=public"
+      ]
     },
     "github": {
       "release": true
